# boot-talk

./: CMakeLists.txt
common/: common.h
hw_comms_interface/hw_abstract_interface/: hw_abstract_interface.h
hw_comms_interface/stm32f4/uart/: uart_hw_interface.cpp  uart_hw_interface.h
hw_comms_interface/x86_linux/uart/: uart_hw_interface.cpp  uart_hw_interface.h
protocol_interface/: protocol_interface.cpp  protocol_interface.h
utils/: circular_buffer.h  debug.h
